# sloppy-xml-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  sloppy_xml.py
.github/workflows/: release.yml  test.yml
tests/: test_enhanced_recovery.py  test_sloppy_xml.py
