[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sloppy-xml-py"
version = "0.1.0"
description = "A sloppy XML parser for Python"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/sloppy-xml-py"
Repository = "https://github.com/yourusername/sloppy-xml-py"

[tool.setuptools]
py-modules = ["sloppy_xml"]

[project.optional-dependencies]
lxml = [
    "lxml>=4.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.12.0",
]
